--- a/src/client/processframe.ui
+++ b/src/client/processframe.ui
@@ -54,7 +54,7 @@ border-radius: 10px;</string>
          <number>0</number>
         </property>
         <item>
-         <widget class="QLabel" name="procNameLabel_2">
+         <widget class="QLabel" name="procNameLabel">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -68,7 +68,7 @@ border-radius: 10px;</string>
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="pidLabel_2">
+         <widget class="QLabel" name="pidLabel">
           <property name="font">
            <font>
             <pointsize>9</pointsize>
@@ -103,7 +103,7 @@ border-radius: 10px;</string>
          <number>20</number>
         </property>
         <item>
-         <widget class="QLabel" name="ramLabel_2">
+         <widget class="QLabel" name="ramLabel">
           <property name="font">
            <font>
             <pointsize>9</pointsize>
@@ -118,7 +118,7 @@ border-radius: 10px;</string>
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="cpuLabel_2">
+         <widget class="QLabel" name="cpuLabel">
           <property name="font">
            <font>
             <pointsize>9</pointsize>
@@ -132,7 +132,7 @@ border-radius: 10px;</string>
        </layout>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_6">
+       <widget class="QPushButton" name="killBtn">
         <property name="maximumSize">
          <size>
           <width>20</width>
