--- a/src/client/MachineFrame.ui
+++ b/src/client/MachineFrame.ui
@@ -883,7 +883,7 @@ background-color: #ececf0;</string>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_16">
                  <item>
-                  <widget class="QLabel" name="label_25">
+                  <widget class="QLabel" name="topProcNameLabel">
                    <property name="styleSheet">
                     <string notr="true">color: rgb(0, 0, 0);</string>
                    </property>
@@ -897,7 +897,7 @@ background-color: #ececf0;</string>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_17">
                  <item>
-                  <widget class="QLabel" name="label_27">
+                  <widget class="QLabel" name="topProcCpuLabel">
                    <property name="styleSheet">
                     <string notr="true">color: rgb(120, 120, 120);</string>
                    </property>
@@ -911,7 +911,7 @@ background-color: #ececf0;</string>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_18">
                  <item>
-                  <widget class="QLabel" name="label_36">
+                  <widget class="QLabel" name="topProcMemLabel">
                    <property name="styleSheet">
                     <string notr="true">color: rgb(120, 120, 120);</string>
                    </property>
@@ -1039,7 +1039,7 @@ border: 2px solid #ececf0;</string>
               </property>
               <property name="styleSheet">
                <string notr="true">border-color: rgb(29, 101, 255);
-border: 2px solid #ececf0;</string>
+border: 2px solid rgb(0, 0, 0);</string>
               </property>
               <property name="text">
                <string>CPU</string>
@@ -1070,8 +1070,7 @@ border: 2px solid #ececf0;</string>
                </font>
               </property>
               <property name="styleSheet">
-               <string notr="true">border-color: rgb(29, 101, 255);
-border: 2px solid #ececf0;</string>
+               <string notr="true">border: 2px solid #ececf0;</string>
               </property>
               <property name="text">
                <string>Name</string>
@@ -1089,7 +1088,7 @@ border: 2px solid #ececf0;</string>
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_38">
+             <widget class="QLabel" name="orderLabel">
               <property name="maximumSize">
                <size>
                 <width>18</width>
